fix error alignment

--- a/src/components/chart-scroll/VerticalBar.css
+++ b/src/components/chart-scroll/VerticalBar.css
@@ -49,32 +49,30 @@
 
   .countyError {
     font-family: 'Roboto Condensed, sans-serif';
-    font-size: 2rem;
-    margin-top: 20vh;
-  }
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
 
   @media screen and (min-width: 320px) {
     .countyError {
-      width: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-    align-items: flex-start;
+      font-family: 'Roboto Condensed', sans-serif;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      margin-top: 8vh;
     }
   }
 
-  @media screen and (min-width: 767px) {
+  @media screen and (min-width: 650px) {
     .countyError {
-    width: 100%;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
+      margin-top: 20vh;
     }
   }
 
   @media only screen and (min-width: 1024px) {
     .countyError {
-
+      font-size: 4em;
     }
   }
 
